added clear-cart func. to modal, add items works now

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         simpleCart({
             checkout: {
                 type: "PayPal",
-                email: "you@yours.com"
+                email: "mhrgrj@gmail.com"
             }
         });
-
     </script>
 
     <!-- Bootstrap -->
@@ -86,14 +85,8 @@
                     <li><a href="#section4-contactUs">Contact Us</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
-
-
-                    <li><a href="javascript:;" class="simpleCart_checkout">Cart</a>
-
-                    </li>
                     <li class="nav-item">
-                        <a id="cartID2" class="nav-link" data-toggle="modal" data-target="#checkoutBox"><span class="simpleCart_quantity numItemsDisabled" ></span> item(s)</a>
-                        <button id="cartID">test </button>
+                        <a id="cartID" class="nav-link" data-toggle="modal" data-target="#checkoutBox"><span class="simpleCart_quantity numItemsDisabled" ></span> item(s) in Cart </a>
                     </li>
                 </ul>
             </div>
@@ -108,26 +101,24 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3 class="modal-title"><i class="fas fa-info-circle"></i> Help</h3>
+                    <h3 class="modal-title"><i class="fas fa-shopping-cart"></i> Cart</h3>
                 </div>
                 <div class="modal-body">
-                    <p class="instruction">
+                    <div class="simpleCart_items"></div>
+                    <div class="simpleCart_quantity"></div>
 
-                        <b>To personalize your own T-shirt:</b> <br>
-                        <b>1.</b> Choose your shirt colour from the provided palette. You will see a preview of the shirt colour on the right side. <br>
-                        <b>2.</b> If you are willing to add an image as your design, select your file and click ‘Upload’. Please note that the only allowed file types are .jpeg and .png. When your image is loaded to the canvas, you will be able to resize and rotate the selection. <br>
-                        <b>3.</b> If you would like to add a text to your shirt design, enter your text to the provided textbox, the click ‘Add Text’. When your text is loaded to the canvas, you will be able to resize and rotate the selection. <br>
-                        <b>3.1</b> To change the font of your text, select the text object on canvas, then click select one of the fonts from the drop down list. <br>
-                        <b>3.2</b> To change the color of the font of your text, select the text object on canvas, then select on the black or white squares to select the color as your text color. <br>
-                        <b>4.</b> If you want to remove any of the objects from the canvas, simply select the object, and click the ‘Delete’ button. <br>
-                        <b>5.</b> Select your size form the dropdown menu.<br>
-                        <b>6.</b> Once you are happy with your shirt design, click on the ‘Add to Cart’ button to add your shirt to the shopping cart. You will be able to proceed with purchase by selecting the shopping cart from the navigation bar.<br>
-                        <b>7.</b> If you have encountered any issues please send us a message through the ‘Contact Us’ section of our website.
+
 
                     </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default closeButton" data-dismiss="modal"><b>Close</b></button>
+                    
+                    <a href="javascript:;" class="simpleCart_empty"> <button type="button" class= "btn btn-default clearButton" data-dismiss="modal"> <b>Clear Cart</b> </button></a>
+                    
+                    <button type="button" class="btn btn-default checkoutPage simpleCart_checkout">
+                    <b>Checkout</b>
+                    </button>
                 </div>
             </div>
         </div>
@@ -144,8 +135,9 @@
                     <br>
                     <br>
                     <br>
-                    <h1>Uglier You</h1>
-                    <p class="lead">Text
+                    <br>
+                    <h1 style="font-family: handWriting; font-size: 700%;">Uglier You</h1>
+                    <p class="lead" style="font-family: handWriting; font-size: 200%;">Ever wanted to look like THESE people? NOW YOU CAN!
                     </p>
                 </div>
                 <!--
@@ -485,10 +477,10 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title"><i class="fas fa-info-circle"></i> Help</h3>
+                                <h3 class="modal-title"><i class="fas fa-info-circle"></i> Cart</h3>
                             </div>
                             <div class="modal-body">
-                                <p class="instruction">
+                                <div class="simpleCart_items"></div>
 
                                     <b>To personalize your own T-shirt:</b> <br>
                                     <b>1.</b> Choose your shirt colour from the provided palette. You will see a preview of the shirt colour on the right side. <br>
@@ -560,17 +552,6 @@
         <!-- Left Panel Ends -->
     </section>
 
-    <!-- FOR THE MODAL -->
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Some text in the Modal..</p>
-        </div>
-
-    </div>
-
 
 
     <script>
@@ -594,12 +575,12 @@
                 } // End if
             });
         });
-
     </script>
 
 
 
     <!-- FOR MODAL -->
+    <!--
     <script>
         // Get the modal
         var modal = document.getElementById('myModal');
@@ -628,6 +609,7 @@
         }
 
     </script>
+    -->
 
     <!--END MODAL -->
 
