fixed image paths

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
                 <div class="row">
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/kale.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/kale.png" />
                         <div class="description">
                             <!--
                         <h3 id="name"> Cool Shirt 1</h3>
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/65wat.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/65wat.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name"> 65 WAT </h3>
@@ -218,7 +218,7 @@
 
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/awwyeah.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/awwyeah.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name">Awww yeahhh!</h3>
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/bruddaShirt.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/bruddaShirt.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name">Brudda, do you no da wae? </h3>
@@ -243,7 +243,7 @@
             <div class="container-fluid content popularShirts">
                 <div class="row">
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/balancetotheswamp.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/balancetotheswamp.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name"> Balance to the Swamp</h3>
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/JJ.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/JJ.png" />
                         <div class="description">
                             <div class="description">
                                 <div class="simpleCart_shelfItem">
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/niceshirt.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/niceshirt.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name"> Nice Shirt, Fam </h3>
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="Photos/circlepunch.png" />
+                        <img class="img-responsive" src="Photos/shirtdesigns/circlepunch.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
                                 <h3 class="item_name"> GOTTEM! </h3>
