forgot to add <a> tag to 'see more' link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     </div>
                     <div class="col-xs-2">
                         <br>
-                        <p class="lead"> See more</p>
+                        <a href="seemore.html"><p class="lead"> See more</p></a>
                     </div>
                 </div>
                 <br>
