--- a/HTML/seemore.html
+++ b/HTML/seemore.html
@@ -83,10 +83,11 @@
                         </ul>
                     </li>
                     -->
-                    <li><a href="#section1-shirts">Top Selections</a></li>
-                    <li><a href="#section2-reviews">Reviews</a></li>
-                    <li><a href="#section3-buildYourOwnShirt">Make Your Own</a></li>
-                    <li><a href="#section4-contactUs">Contact Us</a></li>
+                    <li><a href="/index.html#section1-shirts">Top Selections</a></li>
+                    <li><a href="/index.html#section2-reviews">Reviews</a></li>
+                    <li><a href="/index.html#section3-buildYourOwnShirt">Make Your Own</a></li>
+                    <li><a href="/index.html#section4-contactUs">Contact Us</a></li>
+                    <li><a href="seemore.html">Our Catalogue</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
                     <li class="nav-item">
