added correct file path for home button.

--- a/HTML/seemore.html
+++ b/HTML/seemore.html
@@ -61,7 +61,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="index.html"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
+            <a class="navbar-brand logo" href="/index.html"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
 
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbarId">
