Added consistent padding, & incomplete changes for titles.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
 
 
     <!-- Content 1: Popular Shirt Options -->
-    <!-- Note: The <h1>'s are placeholders for images -->
     <section class="Cool/Popular Shirts">
         <div class="container-fluid chevron-contain">
             <div class="row anchor-contain">
@@ -186,10 +185,29 @@
                     <a href="#section1-shirts"><img class="anchor" id="anchor-scroll" alt="Arrow Down Icon" src="Photos/chevron.png" /></a>
                 </div>
             </div>
-        </div>
+        </div>  <!-- Chevron end -->
+
+                
 
         <div id="section1-shirts" class="container-fluid section1">
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
+                <!-- Title Section -->
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="popularBooks">
+                        Your Shopping Cart
+                    </h1>
+                </div>
+            </div>
+            <div class="row" "line-straight">
+                <div class="col-xs-12">
+                    <img class="center-block" src="/Images/line-straight-thin.png">
+                </div>
+            </div>
+            <br><br>
+        </div>  <!-- Title Section End -->
                 <div class="row">
                     <div class="col-xs-3 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/kale.png" />
@@ -291,7 +309,9 @@
                     </div>
                     <div class="col-xs-2">
                         <br>
-                        <a href="seemore.html"><p class="lead"> See more</p></a>
+                        <a href="seemore.html">
+                            <p class="lead"> See more</p>
+                        </a>
                     </div>
                 </div>
                 <br>
@@ -306,7 +326,7 @@
                 <p style="text-align: center; font-size: 400%; font-family: handWriting; color: rgba(0,0,0,1);"> Check out our verified purchase reviews!!!</p>
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive center-block" src="Photos/user1.png" style="height: 50%; width: 50%;"/>
+                        <img class="img-responsive center-block" src="Photos/user1.png" style="height: 50%; width: 50%;" />
                         <br>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
@@ -314,12 +334,13 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <br>
-                        <p class="sub_paragraph" style="color: black; text-align: justify;">I love my UglierYOU shirt! I bought the <i>"Little Lamb"</i> shirt. I've lost the love of my friends and family, but I know I'm still being stylish, at least! <br><br></p> <p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Matt Damon</p>
+                        <p class="sub_paragraph" style="color: black; text-align: justify;">I love my UglierYOU shirt! I bought the <i>"Little Lamb"</i> shirt. I've lost the love of my friends and family, but I know I'm still being stylish, at least! <br><br></p>
+                        <p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Matt Damon</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive center-block" src="Photos/user2.png" style="height: 50%; width: 50%;"/>
+                        <img class="img-responsive center-block" src="Photos/user2.png" style="height: 50%; width: 50%;" />
                         <br>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
@@ -327,12 +348,13 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <br>
-                        <p class="sub_paragraph" style="color: black; text-align: justify;">I love that the team behind UglierYOU doesn't care about how the world views you. I bought a <i>"GOTTEM"</i> shirt, and I couldn't be more happy. Style is subjective, reject what the higher ups tell you! <br><br></p><p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Paris Hilton</p>
+                        <p class="sub_paragraph" style="color: black; text-align: justify;">I love that the team behind UglierYOU doesn't care about how the world views you. I bought a <i>"GOTTEM"</i> shirt, and I couldn't be more happy. Style is subjective, reject what the higher ups tell you! <br><br></p>
+                        <p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Paris Hilton</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive center-block" src="Photos/user3.png" style="height: 50%; width: 50%;"/>
+                        <img class="img-responsive center-block" src="Photos/user3.png" style="height: 50%; width: 50%;" />
                         <br>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
@@ -340,7 +362,8 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <br>
-                        <p class="sub_paragraph" style="color: black; text-align: justify;">Oh man, oh man, are these shirts awesome or what?! Well, my girlfriend don't respond to me when I ask that question or when I wear my <i>"Brudda, do you no da wae?"</i>shirt but I still think it's great! <br><br></p> <p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Nick Cage</p>
+                        <p class="sub_paragraph" style="color: black; text-align: justify;">Oh man, oh man, are these shirts awesome or what?! Well, my girlfriend don't respond to me when I ask that question or when I wear my <i>"Brudda, do you no da wae?"</i>shirt but I still think it's great! <br><br></p>
+                        <p style="font-size: 200%; font-family: handWriting; color: rgba(0,0,0,1);">-Nick Cage</p>
                     </div>
                 </div>
             </div>
@@ -543,39 +566,39 @@
     <section id="contact-us">
         <!-- Left Panel Begins -->
         <div id="section4-contactUs" class="container-fluid">
-            <div class="col-sm-9" id="panel-left">
-                <div class="col-sm-12">
+            <div class="col-sm-9 no-padding-left" id="panel-left">
+                <div class="col-sm-12 no-padding-left">
                     <h1>Get in Touch</h1>
                 </div>
-                <div class="col-sm-12" id="guidingText">
+                <div class="col-sm-12 no-padding-left" id="guidingText">
                     <h2>Please fill out the form and we will get back in touch with you
                         <h2></h2>
                     </h2>
                 </div>
                 <form action="" method="" id="feedback-form">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 no-padding-left">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Name" id="usr">
                         </div>
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 no-padding-left">
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="Your email address" id="password">
                         </div>
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 no-padding-left">
                         <div class="form-group">
                             <textarea class="form-control" rows="3" placeholder="Message" id="comment"></textarea>
                         </div>
                     </div>
 
                 </form>
-                <div class="col-sm-12">
-                        <button class="feedback" onclick="showSnackbar()"><b>Submit</b></button>
+                <div class="col-sm-12 no-padding-left">
+                    <button class="feedback" onclick="showSnackbar()"><b>Submit</b></button>
                 </div>
                 <div id="snackbar">Thanks for you feedback.</div>
             </div>
-            <div class="col-sm-3" id="panel-right">
+            <div class="col-sm-3 no-padding-left" id="panel-right">
                 <h3>Speak with us:</h3>
                 <p>
 
@@ -631,11 +654,14 @@
             document.getElementById("feedback-form").reset();
             var x = document.getElementById("snackbar");
             x.className = "show";
-            setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            setTimeout(function() {
+                x.className = x.className.replace("show", "");
+            }, 3000);
 
 
 
         }
+
     </script>
     <!--
     <script>
