Added seemore button, modified Titles of personalize section.

--- a/index.html
+++ b/index.html
@@ -307,6 +307,21 @@
                         </div>
                     </div>
                 </div>
+                <!--    Button -->
+                <div class="row">
+                    <div class="col-sm-10">
+                    </div>
+                    <a href="/seemore.html"></a>
+                    <div class="col-sm-2">
+                        <a href="/seemore.html" class="btn btn-primary-active">See More
+                        </a>
+
+                    </div>
+
+
+                </div>
+                <!-- End of Button -->
+                <!-- Old button commented out 
                 <div class="row">
                     <div class="col-xs-10">
                     </div>
@@ -317,6 +332,7 @@
                         </a>
                     </div>
                 </div>
+                -->
                 <br>
             </div>
         </div>
