--- a/index.html
+++ b/index.html
@@ -309,12 +309,13 @@
                 </div>
                 <!--    Button -->
                 <div class="row">
-                    <div class="col-sm-10">
+                    <div class="col-sm-9">
                     </div>
                     <a href="/seemore.html"></a>
-                    <div class="col-sm-2">
+                    <div class="col-md-2 col-sm-3 col-xs-6 pull-right">
                         <a href="/seemore.html" class="btn btn-primary-active">See More
                         </a>
+                    
 
                     </div>
 
