--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
 
                 <!-- Title Section -->
-                <div class="container text-center">
+                <div class="container-fluid text-center">
                     <div class="row">
                         <div class="col-xs-12">
                             <h1 class="popularBooks">
@@ -212,7 +212,7 @@
                 <!-- Title Section End -->
 
                 <div class="row">
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/kale.png" />
                         <div class="description">
                             <!--
@@ -228,7 +228,7 @@
 
                         </div>
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/65wat.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
@@ -344,7 +344,7 @@
         <div id="section2-reviews" class="container-fluid">
 
             <!-- Title Section -->
-            <div class="container text-center">
+            <div class="container-fluid text-center">
                 <div class="row">
                     <div class="col-xs-12">
                         <h1 class="popularBooks">
