Made Top Selections responsive to various screens.

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/awwyeah.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
@@ -249,7 +249,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/bruddaShirt.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
@@ -264,7 +264,7 @@
             </div>
             <div class="container-fluid content popularShirts">
                 <div class="row">
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/balancetotheswamp.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/JJ.png" />
                         <div class="description">
                             <div class="description">
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/niceshirt.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
@@ -296,7 +296,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-3 item-container">
+                    <div class="col-sm-3 col-xs-6 item-container">
                         <img class="img-responsive" src="Photos/shirtdesigns/circlepunch.png" />
                         <div class="description">
                             <div class="simpleCart_shelfItem">
