--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="col-md-2 col-sm-3 col-xs-6 pull-right">
                         <a href="/seemore.html" class="btn btn-primary-active">See More
                         </a>
-                    
+
 
                     </div>
 
@@ -418,7 +418,7 @@
             <div class="row">
 
                 <!-- Title Section -->
-                <div class="container pull-left" <div class="row">
+                <div class="container pull-left">
                     <div class="col-xs-12 no-padding-left">
                         <h1 class="popularBooks">
                             Personalize Your Shirt
@@ -434,7 +434,9 @@
             </div>
             <!-- Title Section End -->
 
-            <div class="col customize-options">
+            <!-- Delete me <div class="col customize-options"> -->
+
+            <div class="row-xs-5">
                 <div class="col-xs-5">
 
                     <!-- commented out for other title
@@ -565,9 +567,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Add me later </div> -->
 
             <div class="col">
-                <div class="col-xs-6">
+                <div class="col-md-6 col-xs-12">
                     <div id="canvasBG">
                         <canvas id="c" width="220" height="400"></canvas>
                     </div>
