Fixed seemore.html Navbar link to iteself.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li><a href="#section2-reviews">Reviews</a></li>
                     <li><a href="#section3-buildYourOwnShirt">Make Your Own</a></li>
                     <li><a href="#section4-contactUs">Contact Us</a></li>
-                    <li><a href="/seemore.html">Our Catalogue</a></li>
+                    <li><a href="seemore.html">Our Catalogue</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
                     <li class="nav-item">
