--- a/seemore.html
+++ b/seemore.html
@@ -70,6 +70,7 @@
                     <li><a href="../index.html#section2-reviews">Reviews</a></li>
                     <li><a href="../index.html#section3-buildYourOwnShirt">Make Your Own</a></li>
                     <li><a href="../index.html#section4-contactUs">Contact Us</a></li>
+                    <li><a href="seemore.html">Our Catalogue</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
                     <li><a href="HTML/checkoutpage.html">Shopping Cart</a></li>
