--- a/index.html
+++ b/index.html
@@ -119,15 +119,7 @@
                     
                     <div class="simpleCart_items"></div><br><br>
                     <!-- cart total (ex. $23.11)-->
-                    <div class="row">
-                      <div class="col-xs-4">
-                        <p class="cartDetail"><b>Total</b></p>
-                      </div>
-                      <div class="col-xs-6">
-                        <div class="simpleCart_total"></div>
-                      </div>
-                    </div>
-                    <!-- cart quantity (ex. 3) -->
+                    
                     <div class="row">
                       <div class="col-xs-4">
                         <p class="cartDetail"><b>Quantity</b></p>
@@ -136,6 +128,16 @@
                         <div class="simpleCart_quantity"></div>
                       </div>
                     </div>
+
+                    <div class="row">
+                      <div class="col-xs-4">
+                        <p class="cartDetail"><b>Total Price (Before Tax)</b></p>
+                      </div>
+                      <div class="col-xs-6">
+                        <div class="simpleCart_total"></div>
+                      </div>
+                    </div>
+                    <!-- cart quantity (ex. 3) -->
 <!--                    <div class="simpleCart_quantity"></div>-->
                     <!-- tax cost (ex. $1.38) -->
                     <div class="row">
